# sanki-arbiter.rs

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
docs/: spec-traceability.md
src/: commitment.rs  event.rs  implicit.rs  lib.rs  natural_state.rs  race_resolution.rs  selection.rs  session.rs  verdict.rs
tests/: conformance.rs
tests/conformance/: scenarios.json  selection.json
